--- a/src/RichErrors/RichErrors.vcxproj.filters
+++ b/src/RichErrors/RichErrors.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="..\..\include\RichErrors\RichErrors.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Threads.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
