--- a/test/RichErrorsTests/RichErrorsTests.vcxproj
+++ b/test/RichErrorsTests/RichErrorsTests.vcxproj
@@ -132,6 +132,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="RichErrorsCppTests.cpp" />
     <ClCompile Include="RichErrorsTests.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
