--- a/test/RichErrorsTests/RichErrorsTests.vcxproj.filters
+++ b/test/RichErrorsTests/RichErrorsTests.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="RichErrorsTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RichErrorsCppTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
