--- a/src/RichErrors/RichErrors.vcxproj
+++ b/src/RichErrors/RichErrors.vcxproj
@@ -152,6 +152,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\RichErrors\RichErrors.h" />
+    <ClInclude Include="..\..\include\RichErrors\RichErrors.hpp" />
     <ClInclude Include="Threads.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
