--- a/test/RichErrorsTests/RichErrorsTests.vcxproj.filters
+++ b/test/RichErrorsTests/RichErrorsTests.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="RichErrorsCppTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Err2CodeTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
