--- a/src/RichErrors/RichErrors.vcxproj
+++ b/src/RichErrors/RichErrors.vcxproj
@@ -148,9 +148,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Err2Code.c" />
     <ClCompile Include="RichErrors.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\include\RichErrors\Err2Code.h" />
     <ClInclude Include="..\..\include\RichErrors\RichErrors.h" />
     <ClInclude Include="..\..\include\RichErrors\RichErrors.hpp" />
     <ClInclude Include="Threads.h" />
