--- a/src/RichErrors/RichErrors.vcxproj
+++ b/src/RichErrors/RichErrors.vcxproj
@@ -153,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\RichErrors\Err2Code.h" />
+    <ClInclude Include="..\..\include\RichErrors\Err2Code.hpp" />
     <ClInclude Include="..\..\include\RichErrors\RichErrors.h" />
     <ClInclude Include="..\..\include\RichErrors\RichErrors.hpp" />
     <ClInclude Include="Threads.h" />
