Make Catch2 main() symmetric
This speeds up compilation when tests are changed.

--- a/test/RichErrorsTests/RichErrorsTests.vcxproj
+++ b/test/RichErrorsTests/RichErrorsTests.vcxproj
@@ -134,6 +134,7 @@
   <ItemGroup>
     <ClCompile Include="Err2CodeCppTests.cpp" />
     <ClCompile Include="Err2CodeTests.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="RichErrorsCppTests.cpp" />
     <ClCompile Include="RichErrorsTests.cpp" />
   </ItemGroup>
