--- a/test/RichErrorsTests/RichErrorsTests.vcxproj.filters
+++ b/test/RichErrorsTests/RichErrorsTests.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="Err2CodeCppTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
