--- a/src/RichErrors/RichErrors.vcxproj
+++ b/src/RichErrors/RichErrors.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="..\..\include\RichErrors\Err2Code.hpp" />
     <ClInclude Include="..\..\include\RichErrors\RichErrors.h" />
     <ClInclude Include="..\..\include\RichErrors\RichErrors.hpp" />
+    <ClInclude Include="DynArray.h" />
     <ClInclude Include="Threads.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
