--- a/src/RichErrors/RichErrors.vcxproj.filters
+++ b/src/RichErrors/RichErrors.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="..\..\include\RichErrors\Err2Code.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DynArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
