--- a/src/RichErrors/RichErrors.vcxproj
+++ b/src/RichErrors/RichErrors.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="DynArray.c" />
     <ClCompile Include="Err2Code.c" />
     <ClCompile Include="RichErrors.c" />
+    <ClCompile Include="SmallMap.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\RichErrors\Err2Code.h" />
@@ -158,6 +159,7 @@
     <ClInclude Include="..\..\include\RichErrors\RichErrors.h" />
     <ClInclude Include="..\..\include\RichErrors\RichErrors.hpp" />
     <ClInclude Include="DynArray.h" />
+    <ClInclude Include="SmallMap.h" />
     <ClInclude Include="Threads.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
