--- a/test/RichErrorsTests/RichErrorsTests.vcxproj
+++ b/test/RichErrorsTests/RichErrorsTests.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="DynArrayTests.cpp" />
     <ClCompile Include="Err2CodeCppTests.cpp" />
     <ClCompile Include="Err2CodeTests.cpp" />
+    <ClCompile Include="InfoMapCppTests.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="RichErrorsCppTests.cpp" />
     <ClCompile Include="RichErrorsTests.cpp" />
