Build Doxygen docs with Meson

--- a/include/meson.build
+++ b/include/meson.build
@@ -1,13 +1,14 @@
-# C headers
-install_headers(
+public_c_headers = files(
         'RichErrors/Err2Code.h',
         'RichErrors/InfoMap.h',
         'RichErrors/RichErrors.h',
-        subdir: 'RichErrors')
+        )
 
-# C++ headers
-install_headers(
+public_cpp_headers = files(
         'RichErrors/Err2Code.hpp',
         'RichErrors/InfoMap.hpp',
         'RichErrors/RichErrors.hpp',
-        subdir: 'RichErrors')
+        )
+
+install_headers(public_c_headers, subdir: 'RichErrors')
+install_headers(public_cpp_headers, subdir: 'RichErrors')
