--- a/meson.build
+++ b/meson.build
@@ -5,3 +5,4 @@ public_inc = include_directories('include')
 subdir('include')
 subdir('src/RichErrors')
 subdir('test/RichErrorsTests')
+subdir('doc')
