Include headers with source in meson.build
This does not affect the build but makes them show up in Meson-generated
Visual Studio projects.

--- a/src/RichErrors/meson.build
+++ b/src/RichErrors/meson.build
@@ -1,8 +1,10 @@
 main_srcs = [
     'DynArray.c',
+    'DynArray.h',
     'Err2Code.c',
     'InfoMap.c',
     'RichErrors.c',
+    'Threads.h',
 ]
 
 main_lib = static_library('RichErrors', main_srcs,
