Include public headers in generated VS project

--- a/src/RichErrors/meson.build
+++ b/src/RichErrors/meson.build
@@ -7,6 +7,13 @@ main_srcs = [
     'Threads.h',
 ]
 
-main_lib = static_library('RichErrors', main_srcs,
+# Public headers are included solely to make them show up in the Visual Studio
+# project
+main_lib = static_library('RichErrors',
+        [
+            main_srcs,
+            public_c_headers,
+            public_cpp_headers,
+        ],
         include_directories: public_inc,
         install: true)
