Fix pthread dependency for Unix

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,7 @@
 project('RichErrors', 'c', 'cpp')
 
+threads_dep = dependency('threads')
+
 public_inc = include_directories('include')
 
 subdir('include')
