--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,14 @@ jobs:
   build:
     strategy:
       matrix:
-        runner: [ubuntu-latest]
+        os: [ubuntu, macos, windows]
+        include:
+          - os: ubuntu
+            runner: ubuntu-latest
+          - os: macos
+            runner: macos-latest
+          - os: windows
+            runner: windows-latest
 
     name: ${{ matrix.runner }} build check
 
@@ -20,24 +27,42 @@ jobs:
 
       - uses: actions/checkout@v2
 
-      - name: Install tools
+      - uses: ilammy/msvc-dev-cmd@v1
+
+      - name: Install tools (Ubuntu)
+        if: matrix.os == 'ubuntu'
         run: |
           sudo apt-get install -y build-essential ninja-build doxygen
           # Install Meson via pip rather than apt to get latest version
-          sudo apt-get install -y python3-pip python3-venv
-          python3 -m venv venv
-          source venv/bin/activate
-          pip install --upgrade pip
-          pip install meson
+          sudo python3 -m pip install --upgrade pip
+          sudo python3 -m pip install meson
 
-      - name: Build
+      - name: Install tools (macOS)
+        if: matrix.os == 'macos'
         run: |
-          source venv/bin/activate
+          brew install meson ninja doxygen
+
+      - name: Install tools (Windows)
+        if: matrix.os == 'windows'
+        run: |
+          choco install -y ninja doxygen.install
+          python3 -m pip install --upgrade pip
+          python3 -m pip install meson
+
+      - name: Build (Unix)
+        if: matrix.os != 'windows'
+        run: |
           mkdir stage
           meson setup --prefix=$(pwd)/stage builddir
           cd builddir
+          ninja test
           ninja install
 
-      - name: List files
+      - name: Build (Windows)
+        if: matrix.os == 'windows'
         run: |
-          find stage |sort
+          mkdir C:/stage
+          meson setup --prefix=C:/stage builddir
+          cd builddir
+          ninja test
+          ninja install
