--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,11 +7,18 @@ repos:
     rev: v4.3.0
     hooks:
       - id: check-yaml
+        args: ["--allow-multiple-documents"]
   - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
     rev: 2.4.0
     hooks:
       - id: editorconfig-checker
         alias: ec
+        exclude: "^test/catch2/"
+  - repo: https://github.com/pre-commit/mirrors-clang-format
+    rev: v14.0.6
+    hooks:
+      - id: clang-format
+        exclude: "^test/catch2/"
   - repo: https://github.com/executablebooks/mdformat
     rev: 0.7.14
     hooks:
