--- a/include/meson.build
+++ b/include/meson.build
@@ -3,16 +3,20 @@
 # SPDX-License-Identifier: BSD-2-Clause
 
 public_c_headers = files(
-        'RichErrors/Err2Code.h',
-        'RichErrors/InfoMap.h',
-        'RichErrors/RichErrors.h',
-        )
+    'RichErrors/Err2Code.h',
+    'RichErrors/InfoMap.h',
+    'RichErrors/RichErrors.h',
+)
 
 public_cpp_headers = files(
-        'RichErrors/Err2Code.hpp',
-        'RichErrors/InfoMap.hpp',
-        'RichErrors/RichErrors.hpp',
-        )
+    'RichErrors/Err2Code.hpp',
+    'RichErrors/InfoMap.hpp',
+    'RichErrors/RichErrors.hpp',
+)
 
-install_headers(public_c_headers, subdir: 'RichErrors')
-install_headers(public_cpp_headers, subdir: 'RichErrors')
+install_headers(public_c_headers,
+    subdir: 'RichErrors',
+)
+install_headers(public_cpp_headers,
+    subdir: 'RichErrors',
+)
