--- a/meson.build
+++ b/meson.build
@@ -2,8 +2,10 @@
 # Copyright 2019-2022 Board of Regents of the University of Wisconsin System
 # SPDX-License-Identifier: BSD-2-Clause
 
-project('RichErrors', 'c', 'cpp',
-        default_options: ['c_std=c11', 'cpp_std=c++14'])
+project('RichErrors',
+    'c', 'cpp',
+    default_options: ['c_std=c11', 'cpp_std=c++14'],
+)
 
 threads_dep = dependency('threads')
 
