--- a/.editorconfig
+++ b/.editorconfig
@@ -10,3 +10,7 @@ root = true
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[meson.build]
+indent_style = space
+indent_size = 4
