Remove unnecessary directory level
Move:
src/RichErrors -> src
test/RichErrorsTests -> test

--- a/meson.build
+++ b/meson.build
@@ -14,6 +14,6 @@ public_inc = include_directories('include')
 catch_dep = dependency('catch2')
 
 subdir('include')
-subdir('src/RichErrors')
-subdir('test/RichErrorsTests')
+subdir('src')
+subdir('test')
 subdir('doc')
