Disable Graphviz in Doxygen
We don't need or want graphs in this simple library.

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -13,8 +13,9 @@ PROJECT_BRIEF          = "A C library for rich (nested) error information"
 INPUT                  = @DOXYGEN_INPUT@
 STRIP_FROM_PATH        = @DOXYGEN_INPUT@
 OUTPUT_DIRECTORY       = @DOXYGEN_OUTPUT@
-OPTIMIZE_OUTPUT_FOR_C  = YES
-HIDE_SCOPE_NAMES       = YES
-SORT_BRIEF_DOCS        = YES
-RECURSIVE              = YES
 GENERATE_LATEX         = NO
+HAVE_DOT               = NO
+HIDE_SCOPE_NAMES       = YES
+OPTIMIZE_OUTPUT_FOR_C  = YES
+RECURSIVE              = YES
+SORT_BRIEF_DOCS        = YES
