Add build option for tests

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -5,3 +5,6 @@
 option('docs', type: 'feature', value: 'auto',
     description: 'Build and install API documentation (requires Doxygen)',
 )
+option('tests', type: 'feature', value: 'enabled',
+    description: 'Build unit tests',
+)
