--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,15 @@ on:
       - main
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+      - uses: pre-commit/action@v3.0.0
+
   test:
     strategy:
       matrix:
@@ -39,7 +48,9 @@ jobs:
           meson dist -C builddir
 
   docs:
-    needs: test
+    needs:
+      - lint
+      - test
     concurrency:
       group: publish-gh-pages
     permissions:
