--- a/include/meson.build
+++ b/include/meson.build
@@ -14,10 +14,12 @@ public_cpp_headers = files(
     'RichErrors/RichErrors.hpp',
 )
 
-install_headers(public_c_headers,
+install_headers(
+    public_c_headers,
     subdir: 'RichErrors',
 )
 
-install_headers(public_cpp_headers,
+install_headers(
+    public_cpp_headers,
     subdir: 'RichErrors',
 )
